--- a/GastroByte/Views/Usuario/Create.cshtml
+++ b/GastroByte/Views/Usuario/Create.cshtml
@@ -83,6 +83,10 @@
         <div class="form-group">
             @Html.HiddenFor(model => model.id_estado, new { Value = 1 })
         </div>
+        <div class="form-group">
+            @Html.HiddenFor(model => model.id_rol, new { Value = 1 })
+        </div>
+
 
 
         <div class="form-group">
