--- a/GastroByte/Views/Home/Index.cshtml
+++ b/GastroByte/Views/Home/Index.cshtml
@@ -1,61 +1,12 @@
 ﻿@{
-    Layout = null; //cano y valentina
+    Layout = "~/Views/Shared/_Layout.cshtml"; //cano y valentina
 }
 
 <!DOCTYPE HTML>
 
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GastroBye &mdash; SOFTWARE_I</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by GetTemplates.co" />
-    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-    <meta name="author" content="GetTemplates.co" />
-
-
-    <meta property="og:title" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
-
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/animate.css")">
-    <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/icomoon.css")">
-    <!-- Themify Icons-->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/themify-icons.css")">
-    <!-- Bootstrap  -->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/bootstrap.css")">
-
-    <!-- Magnific Popup -->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/magnific-popup.css")">
-
-    <!-- Bootstrap DateTimePicker -->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/bootstrap-datetimepicker.min.css")">
-
-    <!-- Owl Carousel  -->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/owl.carousel.min.css")">
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/owl.theme.default.min.css")">
-
-    <!-- Theme style  -->
-    <link rel="stylesheet" href="@Url.Content("~/Content/css/style.css")">
-
-    <!-- Modernizr JS -->
-    <script src="@Url.Content("~/Content/js/modernizr-2.6.2.min.js")"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-    <script src="@Url.Content("~/Content/js/respond.min.js")"></script>
-    <![endif]-->
+   
 
 </head>
 <body>
@@ -65,32 +16,7 @@
     <div id="page">
 
         <!-- <div class="page-inner"> -->
-        <nav class="gtco-nav" role="navigation">
-            <div class="gtco-container">
-
-                <div class="row">
-                    <div class="col-sm-4 col-xs-12">
-                        <div id="gtco-logo"><a href="@Url.Action("Index", "Home")">GASTROBYTE <em>.</em></a></div>
-                    </div>
-                    <div class="col-xs-8 text-right menu-1">
-                        <ul>
-                            <li><a href="@Url.Action("Menu", "Home")">Menú</a></li>
-                            <li class="has-dropdown">
-                                <a href="@Url.Action("Services", "Home")">Servicios</a>
-                                <ul class="dropdown">
-                                    <li><a href="#">Catering de Alimentos</a></li>
-                                    <li><a href="#">Celebración de Bodas</a></li>
-                                    <li><a href="#">Celebración de Cumpleaños</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="@Url.Action("Contact", "Home")">Contacto</a></li>
-                            <li class="btn-cta"><a href="#"><span>Reservación</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
-        </nav>
+        
 
         <header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url('@Url.Content("~/images/img_bg_1.jpg")')" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
