--- a/GastroByte/Views/Shared/_Layout.cshtml
+++ b/GastroByte/Views/Shared/_Layout.cshtml
@@ -1,33 +1,76 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
+    link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/animate.css")">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/icomoon.css")">
+    <!-- Themify Icons-->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/themify-icons.css")">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/bootstrap.css")">
+
+    <!-- Magnific Popup -->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/magnific-popup.css")">
+
+    <!-- Bootstrap DateTimePicker -->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/bootstrap-datetimepicker.min.css")">
+
+    <!-- Owl Carousel  -->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/owl.carousel.min.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/owl.theme.default.min.css")">
+
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="@Url.Content("~/Content/css/style.css")">
+
+    <!-- Modernizr JS -->
+    <script src="@Url.Content("~/Content/js/modernizr-2.6.2.min.js")"></script>
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
+    <script src="@Url.Content("~/Content/js/respond.min.js")"></script>
+    <![endif]-->
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("GastroByte", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                </ul>
+<body class="body-content">
+    <!-- Nueva barra de navegación -->
+    <nav class="gtco-nav" role="navigation" style="background-color: #1b1b1b;">
+        <div class="gtco-container">
+            <div class="row align-items-center">
+                <!-- Alinea los elementos en el centro -->
+                <div class="col-md-4 col-xs-12">
+                    <div id="gtco-logo">
+                        <a href="@Url.Action("Index", "Home")">GASTROBYTE <em>.</em></a>
+                    </div>
+                </div>
+                <div class="col-md-8 text-right menu-1">
+                    <ul class="list-inline">
+                        <!-- Cambiar a list-inline para que los elementos estén en la misma línea -->
+                        <li class="list-inline-item"><a href="@Url.Action("Menu", "Home")">Menú</a></li>
+                        <li class="list-inline-item has-dropdown">
+                            <a href="@Url.Action("Services", "Home")">Servicios</a>
+                            <ul class="dropdown">
+                                <li><a href="#">Catering de Alimentos</a></li>
+                                <li><a href="#">Celebración de Bodas</a></li>
+                                <li><a href="#">Celebración de Cumpleaños</a></li>
+                            </ul>
+                        </li>
+                        <li class="list-inline-item"><a href="@Url.Action("Contact", "Home")">Contacto</a></li>
+                        <li class="list-inline-item btn-cta"><a href="#"><span>Reservación</span></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    </nav>
+
+
+    <!-- Contenido del sitio -->
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -36,6 +79,30 @@
         </footer>
     </div>
 
-   
+    <!-- jQuery -->
+    <script src="@Url.Content("~/Content/js/jquery.min.js")"></script>
+    <!-- jQuery Easing -->
+    <script src="@Url.Content("~/Content/js/jquery.easing.1.3.js")"></script>
+    <!-- Bootstrap -->
+    <script src="@Url.Content("~/Content/js/bootstrap.min.js")"></script>
+    <!-- Waypoints -->
+    <script src="@Url.Content("~/Content/js/jquery.waypoints.min.js")"></script>
+    <!-- Carousel -->
+    <script src="@Url.Content("~/Content/js/owl.carousel.min.js")"></script>
+    <!-- countTo -->
+    <script src="@Url.Content("~/Content/js/jquery.countTo.js")"></script>
+
+    <!-- Stellar Parallax -->
+    <script src="@Url.Content("~/Content/js/jquery.stellar.min.js")"></script>
+
+    <!-- Magnific Popup -->
+    <script src="@Url.Content("~/Content/js/jquery.magnific-popup.min.js")"></script>
+    <script src="@Url.Content("~/Content/js/magnific-popup-options.js")"></script>
+
+    <script src="@Url.Content("~/Content/js/moment.min.js")"></script>
+    <script src="@Url.Content("~/Content/js/bootstrap-datetimepicker.min.js")"></script>
+
+    <!-- Main -->
+    <script src="@Url.Content("~/Content/js/main.js")"></script>
 </body>
 </html>
