--- a/GastroByte/Content/css/style.css
+++ b/GastroByte/Content/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .body-content {
-    margin-top: 27px; /* Ajusta el valor segï¿½n sea necesario */
+    margin-top: 27px; /* Ajusta el valor según sea necesario */
     font-family: "Lato", Arial, sans-serif;
     font-weight: 200;
     font-size: 16px;
@@ -963,6 +963,7 @@ form label {
 #gtco-subscribe .form-control {
   background: transparent;
   color: #fff;
+  font-size: 20px !important;
   width: 100%;
   border: 2px solid rgba(255, 255, 255, 0.2) !important;
   -webkit-transition: 0.5s;
@@ -1365,7 +1366,7 @@ form label {
     background: #FBB448;
     color: #fff;
     border: 2px solid #FBB448 !important;
-    font-size: 16px; /* Tamaï¿½o de la fuente */
+    font-size: 16px; /* Tamaño de la fuente */
    
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
