--- a/GastroByte/Content/css/style.css
+++ b/GastroByte/Content/css/style.css
@@ -392,7 +392,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: block;
 }
 #gtco-header .form-wrap .tab-content .form-control {
-  color: #fff !important;
+  color: #000;
   border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
