--- a/GastroByte/Views/Usuario/Create.cshtml
+++ b/GastroByte/Views/Usuario/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GastroByte.Dtos.UsuarioDto
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Registro";
 }
 
 
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nombres:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control-1" } })
                 @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
@@ -25,15 +25,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.apellido, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Apellidos:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.apellido, new { htmlAttributes = new { @class = "form-control-1" } })
-                @Html.ValidationMessageFor(model => model.apellido, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.apellidos, new { htmlAttributes = new { @class = "form-control-1" } })
+                @Html.ValidationMessageFor(model => model.apellidos, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.tipo_documento, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tipo de documento:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.tipo_documento, new SelectList(new List<string> { "Cédula", "Pasaporte", "DNI" }), "Selecciona", new { @class = "form-control-1" })
                 @Html.ValidationMessageFor(model => model.tipo_documento, "", new { @class = "text-danger" })
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.numero_documento, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nº de documento:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.numero_documento, new { htmlAttributes = new { @class = "form-control-1" } })
                 @Html.ValidationMessageFor(model => model.numero_documento, "", new { @class = "text-danger" })
@@ -49,7 +49,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.telefono, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Teléfono:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control-1" } })
                 @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
@@ -57,15 +57,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.dirreccion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.dirreccion, new { htmlAttributes = new { @class = "form-control-1" } })
-                @Html.ValidationMessageFor(model => model.dirreccion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.correo_electronico, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Correo Electrónico:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.correo_electronico, new { htmlAttributes = new { @class = "form-control-1" } })
                 @Html.ValidationMessageFor(model => model.correo_electronico, "", new { @class = "text-danger" })
@@ -73,7 +65,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.contrasena, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.contrasena, new { htmlAttributes = new { @class = "form-control-1", type = "password" } })
                 @Html.ValidationMessageFor(model => model.contrasena, "", new { @class = "text-danger" })
