--- a/GastroByte/Views/Usuario/Create.cshtml
+++ b/GastroByte/Views/Usuario/Create.cshtml
@@ -67,7 +67,7 @@
         <div class="form-group">
             @Html.Label("Contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.contrasena, new { htmlAttributes = new { @class = "form-control-1", type = "password" } })
+                @Html.EditorFor(model => model.contrasena, new { htmlAttributes = new { @class = "form-control-1" } })
                 @Html.ValidationMessageFor(model => model.contrasena, "", new { @class = "text-danger" })
             </div>
         </div>
