--- a/GastroByte/Views/Home/Index.cshtml
+++ b/GastroByte/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model GastroByte.Dtos.ReservaDto
+@{
     Layout = "~/Views/Shared/_Layout.cshtml"; //cano y valentina
 }
 
@@ -6,7 +7,7 @@
 
 <html>
 <head>
-   
+
 
 </head>
 <body>
@@ -16,7 +17,7 @@
     <div id="page">
 
         <!-- <div class="page-inner"> -->
-        
+
 
         <header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url('@Url.Content("~/images/img_bg_1.jpg")')" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
@@ -26,60 +27,82 @@
 
                         <div class="row row-mt-15em">
                             <div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
-                                <span class="intro-text-small">Hecho a mano por <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>
                                 <h1 class="cursive-font">¡Todo en buen gusto!</h1>
                             </div>
                             <div class="col-md-4 col-md-push-1 animate-box" data-animate-effect="fadeInRight">
                                 <div class="form-wrap">
                                     <div class="tab">
-
                                         <div class="tab-content">
                                             <div class="tab-content-inner active" data-content="signup">
                                                 <h3 class="cursive-font">Reservación de Mesa</h3>
-                                                <form action="#">
-                                                    <div class="row form-group">
-                                                        <div class="col-md-12">
-                                                            <label for="activities">Personas</label>
-                                                            <select name="#" id="activities" class="form-control">
-                                                                <option value="">Personas</option>
-                                                                <option value="">1</option>
-                                                                <option value="">2</option>
-                                                                <option value="">3</option>
-                                                                <option value="">4</option>
-                                                                <option value="">5+</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row form-group">
-                                                        <div class="col-md-12">
-                                                            <label for="date-start">Fecha</label>
-                                                            <input type="text" id="date" class="form-control">
-                                                        </div>
-                                                    </div>
-                                                    <div class="row form-group">
-                                                        <div class="col-md-12">
-                                                            <label for="date-start">Hora</label>
-                                                            <input type="text" id="time" class="form-control">
-                                                        </div>
-                                                    </div>
 
-                                                    <div class="row form-group">
-                                                        <div class="col-md-12">
-                                                            <input type="submit" class="btn btn-primary btn-block" value="Reservar Ahora">
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                                                <!-- Modificación del formulario -->
+                                                @using (Html.BeginForm("Index", "Home"))
+                                                {
+                                                    // Campos del formulario aquí
+                                                
 
-                    </div>
-                </div>
-            </div>
-        </header>
+                                                
+                                                @Html.AntiForgeryToken()
+                                                {
+                                                <div class="form-group">
+                                                    @Html.Label("N.Personas:", htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-10">
+                                                        @Html.EditorFor(model => model.numero_personas, new { htmlAttributes = new { @class = "form-control-1" } })
+                                                        @Html.ValidationMessageFor(model => model.numero_personas, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    @Html.Label("Mesa:", htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-10">
+                                                        @Html.EditorFor(model => model.mesa, new { htmlAttributes = new { @class = "form-control-1" } })
+                                                        @Html.ValidationMessageFor(model => model.mesa, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    @Html.Label("Email:", htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-10">
+                                                        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control-1" } })
+                                                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+
+                                                <div class="row form-group">
+                                                    <div class="col-md-12">
+                                                        @Html.Label("nombre:", htmlAttributes: new { @class = "control-label col-md-2" })
+                                                        @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control-1" } })
+                                                        @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+
+                                                <div class="row form-group">
+                                                    <div class="col-md-12">
+                                                        @Html.Label("hora:", htmlAttributes: new { @class = "control-label col-md-2" })
+                                                        @Html.EditorFor(model => model.hora, new { htmlAttributes = new { @class = "form-control-1" } })
+                                                        @Html.ValidationMessageFor(model => model.hora, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+
+                                                <div class="row form-group">
+                                                    <div class="col-md-12">
+                                                        @Html.Label("Fecha:", htmlAttributes: new { @class = "control-label col-md-2" })
+                                                        @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control-1" } })
+                                                        @Html.ValidationMessageFor(model => model.fecha, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+
+
+                                                <div class="row form-group">
+                                                    <div class="col-md-12">
+                                                        <input type="submit" class="btn btn-primary btn-block" value="Reservar Ahora">
+                                                    </div>
+                                                </div>
+                                                }
+                                                }
+                                                <!-- Fin del formulario -->
+</header>
 
         <div class="gtco-section">
             <div class="gtco-container">
@@ -263,97 +286,35 @@
             </div>
         </div>
 
-        <div id="gtco-subscribe">
-            <div class="gtco-container">
-                <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-                        <h2 class="cursive-font">Suscríbete</h2>
-                        <p>Sé el primero en saber sobre las nuevas plantillas.</p>
-                    </div>
-                </div>
-                <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2">
-                        <form class="form-inline">
-                            <div class="col-md-6 col-sm-6">
-                                <div class="form-group">
-                                    <label for="email" class="sr-only">Email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Tu Email">
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6">
-                                <button type="submit" class="btn btn-default btn-block">Suscribirse</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+        <div class="gototop js-top">
+            <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
 
-        <footer id="gtco-footer" role="contentinfo" style="background-image: url('@Url.Content("~/Content/images/img_bg_1.jpg")')" data-stellar-background-ratio="0.5">
-            <div class="overlay"></div>
-            <div class="gtco-container">
-                <div class="row row-pb-md">
-                    <div class="col-md-12 text-center">
-                        <div class="gtco-widget">
-                            <h3>Contactar</h3>
-                            <ul class="gtco-quick-contact">
-                                <li><a href="#"><i class="icon-phone"></i> +1 234 567 890</a></li>
-                                <li><a href="#"><i class="icon-mail2"></i> info@GetTemplates.co</a></li>
-                                <li><a href="#"><i class="icon-chat"></i> Chat en Vivo</a></li>
-                            </ul>
-                        </div>
-                        <div class="gtco-widget">
-                            <h3>Redes Sociales</h3>
-                            <ul class="gtco-social-icons">
-                                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                                <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
+        <!-- jQuery -->
+        <script src="@Url.Content("~/Content/js/jquery.min.js")"></script>
+        <!-- jQuery Easing -->
+        <script src="@Url.Content("~/Content/js/jquery.easing.1.3.js")"></script>
+        <!-- Bootstrap -->
+        <script src="@Url.Content("~/Content/js/bootstrap.min.js")"></script>
+        <!-- Waypoints -->
+        <script src="@Url.Content("~/Content/js/jquery.waypoints.min.js")"></script>
+        <!-- Carousel -->
+        <script src="@Url.Content("~/Content/js/owl.carousel.min.js")"></script>
+        <!-- countTo -->
+        <script src="@Url.Content("~/Content/js/jquery.countTo.js")"></script>
 
-                    <div class="col-md-12 text-center copyright">
-                        <p>
-                            <small class="block">&copy; 2016 Free HTML5. Todos los derechos reservados.</small>
-                            <small class="block">Diseñado por <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Imágenes de demostración: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small>
-                        </p>
-                    </div>
+        <!-- Stellar Parallax -->
+        <script src="@Url.Content("~/Content/js/jquery.stellar.min.js")"></script>
 
-                </div>
-            </div>
-        </footer>
-    </div>
+        <!-- Magnific Popup -->
+        <script src="@Url.Content("~/Content/js/jquery.magnific-popup.min.js")"></script>
+        <script src="@Url.Content("~/Content/js/magnific-popup-options.js")"></script>
 
-    <div class="gototop js-top">
-        <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-    </div>
+        <script src="@Url.Content("~/Content/js/moment.min.js")"></script>
+        <script src="@Url.Content("~/Content/js/bootstrap-datetimepicker.min.js")"></script>
 
-    <!-- jQuery -->
-    <script src="@Url.Content("~/Content/js/jquery.min.js")"></script>
-    <!-- jQuery Easing -->
-    <script src="@Url.Content("~/Content/js/jquery.easing.1.3.js")"></script>
-    <!-- Bootstrap -->
-    <script src="@Url.Content("~/Content/js/bootstrap.min.js")"></script>
-    <!-- Waypoints -->
-    <script src="@Url.Content("~/Content/js/jquery.waypoints.min.js")"></script>
-    <!-- Carousel -->
-    <script src="@Url.Content("~/Content/js/owl.carousel.min.js")"></script>
-    <!-- countTo -->
-    <script src="@Url.Content("~/Content/js/jquery.countTo.js")"></script>
-
-    <!-- Stellar Parallax -->
-    <script src="@Url.Content("~/Content/js/jquery.stellar.min.js")"></script>
-
-    <!-- Magnific Popup -->
-    <script src="@Url.Content("~/Content/js/jquery.magnific-popup.min.js")"></script>
-    <script src="@Url.Content("~/Content/js/magnific-popup-options.js")"></script>
-
-    <script src="@Url.Content("~/Content/js/moment.min.js")"></script>
-    <script src="@Url.Content("~/Content/js/bootstrap-datetimepicker.min.js")"></script>
-
-    <!-- Main -->
-    <script src="@Url.Content("~/Content/js/main.js")"></script>
+        <!-- Main -->
+        <script src="@Url.Content("~/Content/js/main.js")"></script>
 
 </body>
 </html>
