--- a/GastroByte/Views/Shared/Error.cshtml
+++ b/GastroByte/Views/Shared/Error.cshtml
@@ -9,6 +9,7 @@
     <hgroup>
         <h1>Error.</h1>
         <h2>Error al procesar la solicitud.</h2>
+        <h2>charle que va hacer mañana?</h2>
     </hgroup>
 </body>
 </html>
