--- a/GastroByte/Views/Menu/Index.cshtml
+++ b/GastroByte/Views/Menu/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Lista de Menus";
+    Layout = "~/Views/Shared/_Layout_admin.cshtml"; //cano y valentina   
 }
 
 <h2>Lista de Menus</h2>
