--- a/GastroByte/Views/Shared/Error.cshtml
+++ b/GastroByte/Views/Shared/Error.cshtml
@@ -8,8 +8,8 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>Error al procesar la solicitud.</h2>
-        <h2>charle que va hacer mañana?</h2>
+        <h2>Error al procesar la solicitud. puso mal la direccion </h2>
+        
     </hgroup>
 </body>
 </html>
