--- a/GastroByte/Views/Administrador/IndexMenu.cshtml
+++ b/GastroByte/Views/Administrador/IndexMenu.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Lista de Menus";
-    Layout = "~/Views/Shared/_Layout_admin.cshtml"; //cano y valentina
+    Layout = "~/Views/Shared/_Layout_admin.cshtml"; 
 }
 
 <h2>Lista de Menus</h2>
