--- a/GastroByte/Views/Administrador/IndexReservas.cshtml
+++ b/GastroByte/Views/Administrador/IndexReservas.cshtml
@@ -1,45 +1,38 @@
-﻿@model GastroByte.Dtos.ReservaDto
+﻿@model IEnumerable<GastroByte.Dtos.ReservaDto>
 
 @{
-    ViewBag.Title = "Editar Reserva";
+    ViewBag.Title = "Reservas";
+    Layout = "~/Views/Shared/_Layout_admin.cshtml";
 }
 
-<h2>Editar Reserva</h2>
+<h2>Lista de Reservas</h2>
 
-@using (Html.BeginForm("Edit", "Reservas", FormMethod.Post))
-{
-    @Html.HiddenFor(m => m.id_reservacion)
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.documento)
-        @Html.TextBoxFor(m => m.documento, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.documento)
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.nombre)
-        @Html.TextBoxFor(m => m.nombre, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.nombre)
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.email)
-        @Html.TextBoxFor(m => m.email, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.email)
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.fecha)
-        @Html.TextBoxFor(m => m.fecha, new { @class = "form-control", type = "date" })
-        @Html.ValidationMessageFor(m => m.fecha)
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.hora)
-        @Html.TextBoxFor(m => m.hora, new { @class = "form-control", type = "time" })
-        @Html.ValidationMessageFor(m => m.hora)
-    </div>
-
-    <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-    <a href="@Url.Action("Index", "Reservas")" class="btn btn-secondary">Cancelar</a>
-}
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID Reservación</th>
+            <th>Documento</th>
+            <th>Nombre</th>
+            <th>Correo Electrónico</th>
+            <th>Fecha</th>
+            <th>Hora</th>
+            <th>Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var reserva in Model)
+        {
+            <tr>
+                <td>@reserva.id_reservacion</td>
+                <td>@reserva.documento</td>
+                <td>@reserva.nombre</td>
+                <td>@reserva.email</td>
+                <td>@reserva.fecha</td>
+                <td>@reserva.hora</td>
+                <td>
+                    <a href="@Url.Action("EditReserva", "Administrador", new { id = reserva.id_reservacion })" class="btn btn-success">Editar</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
