--- a/GastroByte/Views/Shared/_Layout_admin.cshtml
+++ b/GastroByte/Views/Shared/_Layout_admin.cshtml
@@ -52,8 +52,8 @@
                 <div class="col-md-8 text-right menu-1">
                     <ul class="list-inline">
                         <!-- Cambiar a list-inline para que los elementos estén en la misma línea -->
-                        <li class="list-inline-item btn-cta"><a href="@Url.Action("Index", "Reservas")"><span>Gestion de Reservas</span></a></li>
-                        <li class="list-inline-item btn-cta"><a href="@Url.Action("Index", "Menu")"><span>Gestion de Menus</span></a></li>
+                        <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexReservas", "Administrador")"><span>Gestion de Reservas</span></a></li>
+                        <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexMenu", "Administrador")"><span>Gestion de Menus</span></a></li>
                         <li class="list-inline-item btn-cta"><a href="#"><span>Gestion de mesas</span></a></li>
                     </ul>
                 </div>
