--- a/GastroByte/Content/css/style.css
+++ b/GastroByte/Content/css/style.css
@@ -321,13 +321,16 @@ h1, h2, h3, h4, h5, h6, figure {
   line-height: 1.5;
   margin-bottom: 30px;
 }
+
+
 #gtco-header .form-wrap {
-  border-top: 10px solid #FBB448;
-  position: relative;
-  width: 100%;
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+    border-top: 10px solid #FBB448;
+    position: relative;
+    width: 100%;
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+    margin-top: -70px; /* Ajusta este valor según necesites */
 }
 #gtco-header .form-wrap h3 {
   font-family: "Kaushan Script", cursive;
@@ -372,13 +375,14 @@ h1, h2, h3, h4, h5, h6, figure {
 #gtco-header .form-wrap .tab-menu li.gtco-second a {
   border-top-right-radius: 7px;
 }
-#gtco-header .form-wrap .tab-content {
-  z-index: 10;
-  position: relative;
-  clear: both;
-  background: rgba(0, 0, 0, 0.5);
-  padding: 30px;
-}
+    #gtco-header .form-wrap .tab-content {
+        z-index: 10;
+        position: relative;
+        clear: both;
+        background: rgba(0, 0, 0, 0.5);
+        padding: 30px;
+        
+    }
 #gtco-header .form-wrap .tab-content h3 {
   color: #fff;
 }
