--- a/GastroByte/Views/Administrador/IndexCarrito.cshtml
+++ b/GastroByte/Views/Administrador/IndexCarrito.cshtml
@@ -37,10 +37,25 @@
     </table>
 
 }
-else
-{
-    <p>El carrito está vacío.</p>
-}
+<div class="total-container">
+    <h4>Total: $@Model.Sum(item => item.precio * item.cantidad)</h4>
+    <a href="@Url.Action("ConfirmarPago", "Administrador")"
+       class="btn btn-primary btn-lg btn-block"
+       onclick="return verificarUsuarioLogueado()">Pagar</a>
+</div>
+
+<script>
+    function verificarUsuarioLogueado() {
+        var usuarioLogueado = '@Session["UserID"]' !== ''; // Verifica si la sesión existe
+        if (!usuarioLogueado) {
+            alert("Debes iniciar sesión para realizar el pago.");
+            window.location.href = '@Url.Action("Login", "Usuario", new { returnUrl = Url.Action("ConfirmarPago", "Administrador") })';
+            return false;
+        }
+        return true;
+    }
+</script>
+
 
 <script>
     function quitarDelCarrito(id) {
