--- a/GastroByte/Views/Usuario/Login.cshtml
+++ b/GastroByte/Views/Usuario/Login.cshtml
@@ -1,34 +1,33 @@
 ﻿@model GastroByte.Dtos.UsuarioDto
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>Iniciar Sesión</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.numero_documento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.numero_documento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.numero_documento, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.contrasena, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.PasswordFor(model => model.contrasena, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.contrasena, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Iniciar Sesión" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+@{
+    ViewBag.Title = "Inicio de Sesión";
+    Layout = "~/Views/Shared/_Layout.cshtml"; // Usa el layout adecuado para tu proyecto
 }
+
+<h2>Iniciar Sesión</h2>
+
+<div class="container">
+    @* Formulario de inicio de sesión *@
+    <form asp-action="Login" method="post">
+        <div class="form-group">
+            <label for="username">Usuario</label>
+            <input type="text" class="form-control" id="username" name="username" required />
+        </div>
+
+        <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input type="password" class="form-control" id="password" name="password" required />
+        </div>
+
+        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+    </form>
+
+    @* Botón para registro *@
+    <div class="mt-3">
+        <p>
+            ¿No tienes una cuenta?
+            <a href="@Url.Action("Create", "Usuario")" class="btn btn-secondary ml-2">Regístrate aquí</a>
+        </p>
+    </div>
+</div>
